[package]
name = "g-raph"
version = "0.1.0"
authors = ["Benjamin Cape <benjcape@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
num-bigint = "0.4.0"
num-primes = { path = "./num-primes" }
num-traits = "0.2.14"
primes = "0.3.0"
priority-queue = "1.1.1"
rand = "0.8.4"
roots = "0.0.7"
